--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -21,22 +21,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'app:month' %}">月間カレンダー</a>
+        <a class="nav-link" href="{% url 'app:month_with_schedule' %}">アラート月間カレンダー</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'app:week' %}">週間カレンダー</a>
+        <a class="nav-link" href="{% url 'app:week_with_schedule' %}">今週の予定</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'app:month_with_schedule' %}">スケジュール付き月間カレンダー</a>
+        <a class="nav-link" href="{% url 'app:mycalendar' %}">出社登録画面</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'app:week_with_schedule' %}">スケジュール付き週間カレンダー</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'app:mycalendar' %}">登録機能付き月間・週間カレンダー</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'app:month_with_forms' %}">一括登録付き月間カレンダー</a>
+        <a class="nav-link" href="{% url 'app:month_with_forms' %}">出社一括登録画面２</a>
       </li>
     </ul>
   </div>
