--- a/app/templates/app/schedule_form.html
+++ b/app/templates/app/schedule_form.html
@@ -4,7 +4,7 @@
     <form action="" method="POST">
         {{ form.as_p }}
         {% csrf_token %}
-        <button type="submit" class="btn btn-primary">送信</button>
+        <button type="submit" class="btn btn-primary">修正</button>
         
         {% csrf_token %}
         <a href="{% url 'app:schedule_delete' schedule.pk %}" class="btn btn-danger">削除</a>
